src/gateway/manifests/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  selector:
    app: gateway
  ports:
    - name: http 
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
