src/gateway/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata: 
  name: gateway-ingress
spec: 
  rules:
    - host: newswatch.com
      http: 
        paths: 
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: gateway 
                port: 
                  number: 8080
